2003-05-30  Bradley Bell  <btb@icculus.org>

	* .cvsignore, 2d/.cvsignore, 3d/.cvsignore, arch/.cvsignore,
	arch/dos/.cvsignore, arch/ggi/.cvsignore, arch/linux/.cvsignore,
	arch/ogl/.cvsignore, arch/sdl/.cvsignore, arch/svgalib/.cvsignore,
	arch/win32/.cvsignore, debian/.cvsignore, iff/.cvsignore,
	libmve/.cvsignore, main/.cvsignore, main/editor/.cvsignore,
	maths/.cvsignore, mem/.cvsignore, misc/.cvsignore,
	texmap/.cvsignore, utilities/.cvsignore: update .cvsignore files

	* main/state.c: improve savegame load/save

	* main/movie.c: make -nomovies friendlier

	* 2d/pcx.c, include/physfsx.h: use physfs for writing pcx files

	* include/d_io.h, include/physfsx.h, main/inferno.c,
	main/newdemo.c, main/scores.c, misc/Makefile.am, misc/d_io.c: get
	rid of d_io stuff.

	* main/scores.c: use physfs for scores file

	* main/playsave.c: improve player loading

	* main/movie.c: improve movie loading

	* main/mission.c: improve mission loading

	* main/ai.c, main/ai.h, main/gameseq.c, main/newmenu.c,
	main/state.c: use physfs for savegames

	* README: minor update

2003-05-22  Bradley Bell  <btb@icculus.org>

	* main/newdemo.c: use physfs for demos

	* include/physfsx.h: added PHYSFSX_rename function

	* libmve/mveplay.c: syntax error

2003-05-21  Bradley Bell  <btb@icculus.org>

	* include/fileutil.h, main/movie.c, misc/Makefile.am,
	misc/fileutil.c: remove old fileutil functions

	* main/gameseq.c, main/mission.c, main/movie.c: make movies use
	physfs/rwops, add libmve callbacks

	* include/libmve.h, libmve/mvelib.c, libmve/mvelib.h,
	libmve/mveplay.c: better separation of libmve

	* include/physfsrwops.h, misc/Makefile.am, misc/physfsrwops.c:
	added physfsrwops stuff

2003-05-20  Bradley Bell  <btb@icculus.org>

	* include/cfile.h: added cfile_close wrapper

	* main/mission.c, main/newmenu.c: use PHYSFS to load missions,
	player files

	* include/ignorecase.h, misc/Makefile.am, misc/ignorecase.c: added
	ignorecase stuff

2003-05-17  Bradley Bell  <btb@icculus.org>
