@@ -1,4 +1,4 @@
-/* $Id: menu.c,v 1.24 2003-04-12 02:52:38 btb Exp $ */
+/* $Id: menu.c,v 1.24.2.1 2003-05-30 23:09:59 btb Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -370,7 +370,7 @@ void do_option ( int select)
 		case MENU_DEMO_PLAY:
 		{
 			char demo_file[16];
-			if (newmenu_get_filename( TXT_SELECT_DEMO, DEMO_DIR "*.dem", demo_file, 1 ))
+			if (newmenu_get_filename(TXT_SELECT_DEMO, "dem", demo_file, 1))
 				newdemo_start_playback(demo_file);
 			break;
 		}
